# volunteers-py

./: AGENTS.md  README.md  docker-compose-dev.yaml  pyproject.toml
ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: routeTree.gen.ts
ui/src/__tests__/: registration.test.ts
ui/src/client/: sdk.gen.ts  types.gen.ts
ui/src/components/: AssessmentDialog.tsx  AssessmentInput.tsx  AttendanceSelector.tsx  DetailedUserCard.tsx  MainLayout.tsx
ui/src/data/: query-keys.ts  use-admin.tsx  use-year.tsx
ui/src/hooks/: useAssignmentOperations.ts  useAssignmentUpdates.ts
ui/src/i18n/locales/en/: translation.json
ui/src/i18n/locales/ru/: translation.json
ui/src/lib/: socket.ts
ui/src/routes/_logged-in/: create.tsx
ui/src/routes/_logged-in/$yearId/: attendance.tsx  contacts.tsx  medals.tsx  registration-forms.tsx  registration.tsx  results.tsx  settings.tsx
ui/src/routes/_logged-in/users/: $userId.tsx  index.tsx
ui/src/store/: auth.ts
ui/src/utils/: download.ts  formShortcuts.ts  gender.ts  should-be-logged-in.ts
volunteers/: app.py
volunteers/alembic/versions/: 2025_11_16_1122-cd2a2b0b1b25_make_manager_positions.py  2025_11_30_2151-8e31dc6646bd_add_gender_to_users.py  2025_12_01_2033-3d81aecb66a0_add_photo_fields_to_user.py  2025_12_01_2300-1006dcfcc630_change_gender_to_enum.py  2025_12_04_2027-f474eb5497c4_allow_fractional_assessment_values.py  2025_12_04_2235-ed61a9a0344a_add_experience_field_to_application_form.py  2025_12_05_0158-2beb515f444b_remove_experience_field_from_.py  2025_12_05_2004-81c24b11a34f_add_score_and_description_to_position.py  2025_12_05_2040-f1c13aace233_force_re_check_dependencies.py  2025_12_05_2049-dd5145b00290_add_score_to_positions.py  2025_12_06_0007-01cb3cdf72e0_add_unique_constraint_positions_per_year.py  2025_12_06_1234_add_save_for_next_year_to_positions.py
volunteers/api/: router.py
volunteers/api/v1/admin/: router.py
volunteers/api/v1/admin/assessment/: router.py  schemas.py
volunteers/api/v1/admin/day/: router.py  schemas.py
volunteers/api/v1/admin/position/: router.py  schemas.py
volunteers/api/v1/admin/user/: router.py  schemas.py
volunteers/api/v1/admin/user_day/: router.py  schemas.py
volunteers/api/v1/admin/year/: router.py  schemas.py
volunteers/api/v1/attendance/: router.py  schemas.py
volunteers/api/v1/auth/: router.py  schemas.py
volunteers/api/v1/auth/__tests__/: test_router.py
volunteers/api/v1/year/: router.py  schemas.py
volunteers/api/v1/year/__tests__/: test_router.py
volunteers/auth/providers/__tests__/: test_telegram.py
volunteers/core/: di.py  experience.py  socketio.py
volunteers/models/: __init__.py  gender.py  models.py
volunteers/schemas/: assessment.py  position.py  user.py  user_day.py  year.py
volunteers/services/: assessment.py  errors.py  export.py  user.py  year.py
volunteers/services/__tests__/: test_base.py  test_errors.py  test_user.py  test_year.py
volunteers/sockets/: __init__.py  assignments.py
volunteers/templates/: certificates.html
(+6 files in other folders)
